namespaces/mogaal.cloud-platform.service.justice.gov.uk/cloud-platform-module-tests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-platform-module-tests
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "cloud-platform-module-tests"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "MoJ Digital"
    cloud-platform.justice.gov.uk/application: "Cloud Platform module tests"
    cloud-platform.justice.gov.uk/owner: "Cloud Platform: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-environments"
